response as song data
